WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
208198
[LFC][OutOfFlow] Out-of-flow positioned line breaks can generate display boxes
https://bugs.webkit.org/show_bug.cgi?id=208198
Summary
[LFC][OutOfFlow] Out-of-flow positioned line breaks can generate display boxes
alan
Reported
2020-02-25 08:11:31 PST
ssia
Attachments
Patch
(3.73 KB, patch)
2020-02-25 08:15 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-02-25 08:11:56 PST
<
rdar://problem/59764787
>
alan
Comment 2
2020-02-25 08:15:10 PST
Created
attachment 391652
[details]
Patch
WebKit Commit Bot
Comment 3
2020-02-25 09:30:43 PST
Comment on
attachment 391652
[details]
Patch Clearing flags on attachment: 391652 Committed
r257360
: <
https://trac.webkit.org/changeset/257360
>
WebKit Commit Bot
Comment 4
2020-02-25 09:30:45 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug