[LFC][OutOfFlow] Out-of-flow positioned line breaks can generate display boxes https://bugs.webkit.org/show_bug.cgi?id=208198 <rdar://problem/59764787>

Reviewed by Antti Koivisto.

Source/WebCore:

Test: fast/layoutformattingcontext/out-of-flow-positioned-line-breaks.html

This assert should take the positioning into account when checking againts line breaks.
(In practice those display boxes are empty and they don't really contribute to rendering but
they are still valid content.)

* layout/FormattingState.cpp:
(WebCore::Layout::FormattingState::displayBox):

LayoutTests:

* fast/layoutformattingcontext/out-of-flow-positioned-line-breaks-expected.html: Added.
* fast/layoutformattingcontext/out-of-flow-positioned-line-breaks.html: Added.


Canonical link: https://commits.webkit.org/221133@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257360 268f45cc-cd09-0410-ab3c-d52691b4dbfc